--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body {
 }
 
 #demo, #savedScore {
-    background: #E0D3D3;
+    background: #E0D3D3; //color code grey for better viewing as directed
     color: red;
     width: 100px;
     height 20px;
